animate and delete tiles when clearing

--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
-- return the location of matched tiles
 - make tiles disappear on match
 - after tiles disappear, tiles should fall
 - better looking cursor
 - swap animations
+
+DONE
+- return the location of matched tiles
+- lock clearing tiles
