Improved clearing detection, falling after clearing, added chain/combo/score counter
Clearing detection should work properly now (hopefully) although it still seems a bit buggy sometimes, but hard to reproduce the bugs.
Added state.lua to keep track of game state, and hud.lua to display score, combo, and chain counters.
Clearing a tile is accomplished by setting .cleared, instead of setting to nil because setting to nil caused all sorts of weird problems.

--- a/TODO
+++ b/TODO
@@ -1,8 +1,13 @@
-- make tiles disappear on match
-- after tiles disappear, tiles should fall
+- higher scores for combos
+- when swapping into a gap, immediately apply gravity
+- mysterious tile clearing bugs: problem with concurrence?
+    - hard to duplicate....
 - better looking cursor
 - swap animations
 
 DONE
+- add HUD with chain counter
+- after tiles disappear, tiles should fall
+- make tiles disappear on match
 - return the location of matched tiles
 - lock clearing tiles
